fix unalignment of price column when mixing multi-row trees and single-row trees

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -632,6 +632,10 @@ color:#339900;
 	font-size: 165%;
 	}
 
+td.estimate_multirow_col{
+	min-width:210px;
+}
+
 
 ._red {color:#f33;}
 ._orange{ color:#ff8c26; }
